fixes related items top alignment

--- a/client/src/scss/_related.scss
+++ b/client/src/scss/_related.scss
@@ -25,7 +25,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-items: center;
-		align-items: center;
+		align-items: flex-start;
 		text-align: center;
 		justify-content: center;
 
